--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -158,6 +158,10 @@ layout: page
 	<div class="card oh">
 		<div class="card-content">
 			<div class="row">
+				<div class="col-4">Deauth detector</div>
+				<div class="col-8"><a href="https://github.com/spacehuhn/DeauthDetector">https://github.com/spacehuhn/DeauthDetector</a></div>
+			</div>
+			<div class="row">
 				<div class="col-4">Wireshark manufacturer database</div>
 				<div class="col-8"><a href="https://www.wireshark.org/tools/oui-lookup.html">https://www.wireshark.org/tools/oui-lookup</a></div>
 			</div>
