--- a/web_server/html/setup.html
+++ b/web_server/html/setup.html
@@ -38,13 +38,13 @@ layout: html
 							<div class="row">
 								<div class="col-6">
 									<div class="input-container">
-										<input placeholder=" " id="ssid" type="text" required="" minlength="1" maxlength="32" value="Wi-PWN">
+										<input placeholder=" " id="ssid" type="text" required="" minlength="1" maxlength="32" value="Wi-PWN" autocorrect="off" autocapitalize="none" spellcheck="false">
 										<label for="ssid">{% t global.ssid %}</label>
 									</div>
 								</div>
 								<div class="col-6">
 									<div class="input-container">
-										<input placeholder=" " id="password" type="text" required="" minlength="8" maxlength="32" value="rootaccess">
+										<input placeholder=" " id="password" type="text" required="" minlength="8" maxlength="32" value="rootaccess" autocorrect="off" autocapitalize="none" spellcheck="false">
 										<label for="ssid">{% t setup.page-2.card.field-1 %}</label>
 									</div>
 								</div>
