:pencil2: Minor translation fix

--- a/web_server/html/404.html
+++ b/web_server/html/404.html
@@ -4,7 +4,7 @@ after-js: fadeIn()
 layout: page
 ---
 <div class="card-container">
-	<div class="settingsHeader">Page not found</div>
+	<div class="settingsHeader">{% t error.page-header %}</div>
 	<div class="card">
 		<div class="card-content">
 			<div class="glitch" data-text="404">404</div>
