minifier.html fix reference

--- a/web_server/additional/minifier.html
+++ b/web_server/additional/minifier.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <script src="additional/jquery.js"></script>
-    <script src="additional/htmlminifier.min.js"></script>
+    <script src="jquery.js"></script>
+    <script src="htmlminifier.min.js"></script>
     <script>
     var minify = require('html-minifier').minify;
     String.prototype.convertToHex = function(delim) {
